--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 1.0.0
 	maven_group = net.zestyblaze
-	archives_base_name = goldencows
+	archives_base_name = malusphaethusa-1.17
 
 # Dependencies
 	fabric_version=0.37.1+1.17
