--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,10 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
-# Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.52
-	loader_version=0.11.6
-
-# Mod Properties
-	mod_version = 1.0.1
+	minecraft_version=1.18.1
+	yarn_mappings=1.18.1+build.17
+	loader_version=0.12.12
+	mod_version = 1.0.2
 	maven_group = net.zestyblaze
-	archives_base_name = malusphaethusa-1.17
-
-# Dependencies
-	fabric_version=0.40.0+1.17
+	archives_base_name = malusphaethusa-1.18
+	fabric_version=0.45.1+1.18
+	cloth_config_version = 6.1.48
+	modmenu_version = 3.0.1
